--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@
 				<img alt="logo" class="comingSoonLogoWhite" src="img/losiana-logo-big-white.png">
 				<h1>درحال آماده سازی   لوسیانا هستیم  ...</h1> 
  				<p class="comingText">افتتاح پروژه  یک  شهریور ماه </p>
-				<div id="getting-started"  class="grBg2"> 
+				<div id="getting-started"  class="grBg2 getting-started"> 
 					<p  >
 						<span id="day"></span>
 						روز
@@ -55,6 +55,9 @@
 						ثانیه
 					</p>
 				</div> 
+				<p>
+					<a   class="grBg2 getting-started comingSoonBut" target="_blank" href="https://forms.gle/Hc5NKCxgKWFtJqSB6">نظرسنجی </a>
+				</p>
 				<div class="social">
 					<a href="https://t.me/losiana_com" target="_blank">
 						<i class="fab garText fa-telegram-plane"></i>
