--- a/index.htm
+++ b/index.htm
@@ -56,7 +56,7 @@
 					</p>
 				</div> 
 				<p>
-					<a   class="grBg2 getting-started comingSoonBut" target="_blank" href="https://forms.gle/Hc5NKCxgKWFtJqSB6">نظرسنجی </a>
+					<a   class="grBg2 getting-started comingSoonBut" target="_blank" href="https://survey.porsline.ir/s/c9QbBMI">نظرسنجی </a> 
 				</p>
 				<div class="social">
 					<a href="https://t.me/losiana_com" target="_blank">
